fixed carousel on safari (replaced flex gap)

--- a/src/components/RecipeCard/RecipeCard.css
+++ b/src/components/RecipeCard/RecipeCard.css
@@ -5,6 +5,10 @@
   display: flex;
 }
 
+.recipe-card__link:link {
+  color: var(--black);
+}
+
 .recipe-card__link:visited {
   color: var(--black)
 }
